syntax = "proto3";

package transaction;

// STRUCTS

message Version {
    uint32 major = 1;
    uint32 minor = 2;
    uint32 patch = 3;
}

// SIGNED TRANSACTION INTERFACE

message SignedTransaction {
    Transaction transaction = 1;
    bytes signature = 2;
}

// TRANSACTION INTERFACE

message Transaction {
    Version version = 1;
    bytes sender = 2;
    int32 target_controller = 3;
    int32 request_type = 4;
    bytes recent_block_hash = 5;
    uint64 fee = 6;
    bytes request_bytes = 7;
}